# cca

./: .flake8  .gitignore  pyproject.toml
cca/: __init__.py  cca.py  handler.py  simulations.py  utils.py
cca/plots/: __init__.py  heatmap.py  plots.py
tests/: test_cca.py  test_simulations.py
