[tool.poetry]
name = "cca"
version = "0.1.0"
description = "Bayesian Canonical Correlation Analysis"
authors = ["Harald Vohringer"]

[tool.poetry.dependencies]
python = "^3.8"
numpyro = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
black = "^21.9b0"
isort = "^5.9.3"
flake8 = "^3.9.2"
bandit = "^1.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
